add Main tag class and Main content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">header</header>
+    <header class="header">Header</header>
+    <main class="main">Main</main>
 </body>
 </html>
