add aside tag class and Aside content

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <header class="header">Header</header>
     <main class="main">Main</main>
+    <aside class="aside">Aside</aside>
+    
 </body>
 </html>
