add footer tag class and Footer content

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <header class="header">Header</header>
     <main class="main">Main</main>
     <aside class="aside">Aside</aside>
-    
+    <footer class="footer">Footer</footer>
 </body>
 </html>
